[package]
authors = ["Lee Lian Hoy <cruz@zyk3.net>"]
edition = "2018"
name = "helloworld-tonic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
dotenv = "*"
prost = "0.7"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
